@@ -1,0 +1,9 @@
+@comment $NetBSD: PLIST,v 1.1 2015/02/27 04:23:43 manu Exp $
+include/cmocka.h
+include/cmocka_pbc.h
+lib/cmake/cmocka/cmocka-config-version.cmake
+lib/cmake/cmocka/cmocka-config.cmake
+lib/libcmocka.so
+lib/libcmocka.so.0
+lib/libcmocka.so.0.3.0
+lib/pkgconfig/cmocka.pc
